Fixed alert width on mobile device

--- a/app/components/modules/Alert.module.scss
+++ b/app/components/modules/Alert.module.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "mixins";
 
 .alert {
   z-index: 100;
@@ -6,7 +7,10 @@
   top: 10px;
   right: 10px;
   min-height: 50px;
-  width: 30vw;
+  width: 60vw;
+  @include breakpoint(small) {
+    width: 30vw;
+  }
   opacity: 0.9;
 
   padding: 1em;
